Improved the speed of the validation. Fixed some errors for contact recommendation. Now, InteractiveRecommender treats  reciprocal links correctly.