@@ -39,7 +39,7 @@ public class FastUndirectedUnweightedGraph<V> extends FastGraph<V> implements Un
     @Override
     public DoubleMatrix2D getAdjacencyMatrix(EdgeOrientation direction)
     {
-        DoubleMatrix2D matrix = new SparseDoubleMatrix2D(new Long(this.getVertexCount()).intValue(), new Long(this.getVertexCount()).intValue());
+        DoubleMatrix2D matrix = new SparseDoubleMatrix2D(Long.valueOf(this.getVertexCount()).intValue(), Long.valueOf(this.getVertexCount()).intValue());
 
         // Creation of the adjacency matrix.
         for (int row = 0; row < matrix.rows(); ++row)
@@ -62,7 +62,7 @@ public class FastUndirectedUnweightedGraph<V> extends FastGraph<V> implements Un
     @Override
     public Matrix getAdjacencyMatrixMTJ(EdgeOrientation direction)
     {
-        Matrix matrix = new LinkedSparseMatrix(new Long(this.getVertexCount()).intValue(), new Long(this.getVertexCount()).intValue());
+        Matrix matrix = new LinkedSparseMatrix(Long.valueOf(this.getVertexCount()).intValue(), Long.valueOf(this.getVertexCount()).intValue());
         this.vertices.getAllObjects().forEach(u ->
         {
             int uIdx = this.vertices.object2idx(u);
